--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1",
     "paypal-rest-sdk": "^1.8.1",
+    "serverless-http": "^3.2.0",
     "vercel": "^46.0.2"
   }
 }
