--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "paypal-rest-sdk": "^1.8.1",
     "serverless-http": "^3.2.0",
+    "streamifier": "^0.1.1",
     "vercel": "^46.0.2"
   }
 }
